# cetz

./: .editorconfig  .gitignore  .gitmodules  CHANGES.md  LICENSE  README.md  bezier.typ  canvas.typ  cmd.typ  collisions.typ  coordinate.typ  draw.typ  external  flake.nix  intersection.typ  justfile  lib.typ  main.typ  manual.typ  mark old.typ  matrix.typ  path-util.typ  plot.typ  requirements.typ  styles.typ  tree.typ  typst.toml  typstfmt-config.toml  util.typ  vector.typ
.github/: FUNDING.yml
cetz-core/: .rustc_info.json  Cargo.toml
cetz-core/src/: layout.rs  lib.rs
cetz-core/src/layout/: test.rs
cetz-core/src/path_bool/: convert.rs  error.rs  mod.rs  op.rs  wire.rs
core/: Cargo.toml  cetz_core.wasm  test.typ
demo/: 3d-diagram.typ  anchor.typ  circuit.typ  karl-picture.typ  path.typ  plot-axes.typ  shadow.typ  transform.typ
doc/: example.typ  style.typ  util.typ
docs/: custom-types.js  genhtml.py  getting-started.mdx  overview.md  sidebar.js  style.typ
gallery/: 3d-chart.typ  barchart.typ  karls-picture.typ  paciolis.typ  periodic-table.typ  pie-chart.typ  plate-capacitor.typ  plot.typ  torus.typ  tree.typ  waves.typ
lib/: axes.typ  chart.typ  palette.typ  plot.typ
old/: canvas.typ  cmd.typ  draw.typ
plugin/: Makefile  cetz.cpp  cetz.wasm  contourklip.hpp  protocol.h
scripts/: package  relpaths  test
src/: aabb.typ  anchor-helper.typ  anchor.typ  bezier.typ  canvas.typ  cmd.typ  complex.typ  coordinate.typ  deps.typ  draw.typ  drawable.typ  error.typ  external.typ  geometry.typ  hobby.typ  intersection.typ  lib.typ  mark-shapes.typ  mark.typ  (+15 more)
(+415 files in other folders)
